--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,7 +84,8 @@ body,
 #__next {
   max-width: 100vw;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+  position: relative;
 }
 
 body {
@@ -95,7 +96,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    overflow-x: hidden;
 }
 
 a {
