--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -108,3 +108,25 @@ a {
     color-scheme: dark;
   }
 }
+
+.scroll::-webkit-scrollbar {
+  width: 8px;
+  /* padding-top: 100px; */
+}
+
+.scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: #ffffff32;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+.scroll:hover::-webkit-scrollbar-thumb {
+  background: whitesmoke;
+}
